# lisapi

./: .env  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  app.py  config.py  deploy-local.md  deploy-nginx.md  lisapi.ini  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_prod.txt  run.py  settings.py  storage_dev.db  storage_dev.db-journal  wsgi.py
app/: __init__.py
app/controllers/: default.py
app/errors/: errors.py
app/helpers/: helpers.py
app/models/: forms.py  tables.py
app/static/css/: custom.css
app/static/js/: custom.js
app/templates/: 401.html  404.html  500.html  about.html  base.html  change_password.html  control.html  edit.html  footer.html  index.html  list.html  login.html  new.html  signup.html
lisapi/: __init__.py  cli.py  routes.py
lisapi/auth/: views.py
lisapi/errors/: error.py  views.py
lisapi/helpers/: helpers.py
lisapi/main/: views.py
lisapi/models/: forms.py  tables.py
lisapi/pin/: __init__.py  views.py
lisapi/pwa/: __init__.py  views.py
lisapi/routes/: auth.py  main.py  pwa.py
lisapi/static/: manifest.json  sw.js
lisapi/static/css/: custom.css
lisapi/static/js/: custom.js  sw.js
lisapi/templates/: __flash_messages.html  __navbar.html  __sidemenu.html  _navbar.html  _sidemenu.html  about.html  base.html
lisapi/templates/auth/: change_password.html  login.html  signup.html
lisapi/templates/error/: 401.html  404.html  500.html
lisapi/templates/main/: control.html  dashboard.html  edit.html  list.html  new.html
lisapi/templates/pin/: control.html  (+2 more)
lisapi/utils/: validators.py
