[tool.poetry]
name = "lisapi"
version = "1.0"
description = "A Flask app to control some things in your Raspberry Pi."
authors = ["bergpb <lindembergdepaulo@@gmail.com>"]

[tool.poetry.dependencies]
Flask = "^1.1.2"
Flask-Login = "^0.5.0"
Flask-Migrate = "^2.5.3"
Flask-SocketIO = "^4.3.0"
Flask-SQLAlchemy = "^2.4.1"
Flask-WTF = "^0.14.3"
Flask-Script = "^2.0.6"
python-dotenv = "^0.13.0"
requests = "^2.23.0"
"RPi.GPIO" = "^0.7.0"
psutil = "^5.7.0"
eventlet = "^0.31.0"
python = "^3.6"
gunicorn = "^20.0.4"
uwsgi = "^2.0.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
